Fix image source paths for consistency
Updated image source paths to use consistent capitalization.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="about-content">
                 <div class="about-image animate-on-scroll">
                     <div class="image-wrapper">
-                        <img src="images/Aayushi.jpeg" alt="Aayushi Sadani" class="about-photo" loading="lazy">
+                        <img src="Images/Aayushi.jpeg" alt="Aayushi Sadani" class="about-photo" loading="lazy">
                     </div>
                 </div>
                 <div class="about-text animate-on-scroll">
@@ -425,7 +425,7 @@
             <div class="projects-grid">
                 <div class="project-card animate-on-scroll">
                     <div class="project-image">
-                        <img src="images/Campus%20cravings.avif" alt="Campus Craving" class="project-img">
+                        <img src="Images/Campus%20cravings.avif" alt="Campus Craving" class="project-img">
                     </div>
                     <div class="project-content">
                         <h3>Full-stack Project - Campus Craving</h3>
@@ -440,7 +440,7 @@
                 </div>
                 <div class="project-card animate-on-scroll">
                     <div class="project-image">
-                        <img src="images/Kernel.webp" alt="Weenix OS Kernel" class="project-img">
+                        <img src="Images/Kernel.webp" alt="Weenix OS Kernel" class="project-img">
                     </div>
                     <div class="project-content">
                         <h3>Weenix Operating System Kernel</h3>
@@ -455,7 +455,7 @@
                 </div>
                 <div class="project-card animate-on-scroll">
                     <div class="project-image">
-                        <img src="images/keylogger.avif" alt="Keylogger Software" class="project-img">
+                        <img src="Images/keylogger.avif" alt="Keylogger Software" class="project-img">
                     </div>
                     <div class="project-content">
                         <h3>Keylogger Software</h3>
